# remitflow-core-dapp

./: README.md  USER_GUIDE.md  package-lock.json  package.json  vercel.json
contracts/remitflow/: Cargo.toml
contracts/remitflow/src/: lib.rs  test.rs
src/: App.css  App.js  contract.ts
src/components/: Header.js  SendPayment.js  TransactionResult.js
